Fix text alignment in css

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ h2 {
 }
 
 body {
-  margin 1rem;
+  margin: 1rem;
   font-family: Lato, sans-serif;
 }
 
@@ -22,11 +22,13 @@ body {
 img {
   width: 25em;
   display: block;
+  vertical-align: middle;
 }
 
 div {
   max-width: 25em;
   display: inline-block;
+  text-align: left;
 }
 
 a {
@@ -37,6 +39,7 @@ a {
   font-family: sans-serif;
   border: 3px solid #333;
   color: #333;
+  text-align: center;
 }
 
 a:hover {
